Tue May 24 16:37:43 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (ruby_cflags): separate from optflags [Bug #12409]
	  -fexcess-precision=standard and -fp-model precise are set to this now.

	* configure.in (cflags): use ruby_cflags.

Tue May 24 16:20:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ERRORFUNC, WARNINGFUNC): __error__ and __warning__
	  attributes take a parenthesized string literal.

Tue May 24 12:35:56 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* common.mk : sort lines, and add missing dependencies suggested
	  by tool/update-deps

Mon May 23 21:33:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/missing.h (isfinite): move from numeric.c.

Mon May 23 21:09:06 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (Init_openssl): Avoid reference to unset global
	  variable. ossl_raise() may be called before dOSSL is set. Since
	  global variables default to 0 and the default value of dOSSL set in
	  Init_openssl() is also Qfalse, there is no real issue but confusing.
	  Patch by Bertram Scharpf <software@bertram-scharpf.de>
	  [ruby-core:58264] [Bug #9101]

Mon May 23 20:32:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c, ext/openssl/ossl_bn.c,
	  ext/openssl/ossl_cipher.c, ext/openssl/ossl_digest.c
	  ext/openssl/ossl_engine.c, ext/openssl/ossl_ns_spki.c
	  ext/openssl/ossl_pkcs12.c, ext/openssl/ossl_pkcs7.c
	  ext/openssl/ossl_pkey.c, ext/openssl/ossl_pkey_ec.c
	  ext/openssl/ossl_rand.c, ext/openssl/ossl_ssl.c
	  ext/openssl/ossl_x509attr.c, ext/openssl/ossl_x509cert.c
	  ext/openssl/ossl_x509ext.c, ext/openssl/ossl_x509store.c: Use
	  StringValueCStr() where NUL-terminated string is expected.

Mon May 23 20:20:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (isfinite): get rid of a warning on
	  cygwin. [Bug #12417][ruby-core:75691]

Mon May 23 19:41:27 2016  Kazuki Yamaguchi  <k@rhe.jp>
